sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: value >- is not a member of Int
      while (j-ecart>-1 && !plusPetitQue(j-ecart,v)) {
                    ^